Make sure words break in code and h1 tags

--- a/resources/sass/_article_content.scss
+++ b/resources/sass/_article_content.scss
@@ -144,6 +144,7 @@ html {
     color: rgba(0,0,0,.84);
     letter-spacing: 0.025em;
     margin: 3rem 0 1rem;
+    word-break: break-all;
   }
 
   h1,
