--- a/resources/sass/_syntax_hightlighting.scss
+++ b/resources/sass/_syntax_hightlighting.scss
@@ -7,7 +7,7 @@ pre[class*="language-"] {
   text-align: left;
   white-space: pre;
   word-spacing: normal;
-  word-break: normal;
+  word-break: break-all;
   word-wrap: normal;
   line-height: 1.5;
 
